@@ -1,3 +1,13 @@
+2002-07-17  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/move_resize.c (moveLoop):
+	fixed problem moving the pointer off screen while moving a window
+	(AnimatedMoveAnyWindow):
+	fixed pointer warping w/ multiple screens and animated window motion
+	(InteractiveMove):
+	fixed interactive move starting point when pointer moved to different
+	screen before the action starts
+
 2002-07-10  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/events.c (WaitForButtonsUp):
